; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_stream.c_seek_handler_checksum.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_stream.c_seek_handler_checksum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.checksum_stream_baton = type { i32, i64, i64 }

@SVN_ERR_STREAM_SEEK_NOT_SUPPORTED = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i32*)* @seek_handler_checksum to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @seek_handler_checksum(i8* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.checksum_stream_baton*, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = bitcast i8* %7 to %struct.checksum_stream_baton*
  store %struct.checksum_stream_baton* %8, %struct.checksum_stream_baton** %6, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load i32, i32* @SVN_ERR_STREAM_SEEK_NOT_SUPPORTED, align 4
  %13 = call i32* @svn_error_create(i32 %12, i32* null, i32* null)
  store i32* %13, i32** %3, align 8
  br label %42

14:                                               ; preds = %2
  %15 = load %struct.checksum_stream_baton*, %struct.checksum_stream_baton** %6, align 8
  %16 = getelementptr inbounds %struct.checksum_stream_baton, %struct.checksum_stream_baton* %15, i32 0, i32 2
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %24

19:                                               ; preds = %14
  %20 = load %struct.checksum_stream_baton*, %struct.checksum_stream_baton** %6, align 8
  %21 = getelementptr inbounds %struct.checksum_stream_baton, %struct.checksum_stream_baton* %20, i32 0, i32 2
  %22 = load i64, i64* %21, align 8
  %23 = call i32 @svn_checksum_ctx_reset(i64 %22)
  br label %24

24:                                               ; preds = %19, %14
  %25 = load %struct.checksum_stream_baton*, %struct.checksum_stream_baton** %6, align 8
  %26 = getelementptr inbounds %struct.checksum_stream_baton, %struct.checksum_stream_baton* %25, i32 0, i32 1
  %27 = load i64, i64* %26, align 8
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %34

29:                                               ; preds = %24
  %30 = load %struct.checksum_stream_baton*, %struct.checksum_stream_baton** %6, align 8
  %31 = getelementptr inbounds %struct.checksum_stream_baton, %struct.checksum_stream_baton* %30, i32 0, i32 1
  %32 = load i64, i64* %31, align 8
  %33 = call i32 @svn_checksum_ctx_reset(i64 %32)
  br label %34

34:                                               ; preds = %29, %24
  %35 = load %struct.checksum_stream_baton*, %struct.checksum_stream_baton** %6, align 8
  %36 = getelementptr inbounds %struct.checksum_stream_baton, %struct.checksum_stream_baton* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 8
  %38 = call i32 @svn_stream_reset(i32 %37)
  %39 = call i32 @SVN_ERR(i32 %38)
  br label %40

40:                                               ; preds = %34
  %41 = load i32*, i32** @SVN_NO_ERROR, align 8
  store i32* %41, i32** %3, align 8
  br label %42

42:                                               ; preds = %40, %11
  %43 = load i32*, i32** %3, align 8
  ret i32* %43
}

declare dso_local i32* @svn_error_create(i32, i32*, i32*) #1

declare dso_local i32 @svn_checksum_ctx_reset(i64) #1

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_stream_reset(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
